Overflow fixed

--- a/src/styles/AddUserSidebar.less
+++ b/src/styles/AddUserSidebar.less
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  background-color: white;
 
   &__input-name, &__input-surname,&__gender{
     border:0;
